Calculs mots inconnus test/train

--- a/Code/4a_Sentimental analysis_BaseLine.ipynb
+++ b/Code/4a_Sentimental analysis_BaseLine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,6 +800,117 @@
    ],
    "source": [
     "matrice_sentiments_val[\"pas\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mots de la base test inconnus dans la base train - SNCF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrases_train = [tweet.split() for (score, tweet) in corpus_train]\n",
+    "mots_train = [item for sublist in phrases_train for item in sublist]\n",
+    "vocabulaire_train = list(dict.fromkeys(mots_train))\n",
+    "phrases_test = [tweet.split() for (score, tweet) in corpus_test]\n",
+    "mots_test = [item for sublist in phrases_test for item in sublist]\n",
+    "vocabulaire_test = list(dict.fromkeys(mots_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apparition de chaque mot\n",
+    "app_test = {mot:0 for mot in vocabulaire_test}\n",
+    "for phrase in phrases_test:\n",
+    "    for mot in phrase:\n",
+    "        app_test[mot] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# après-coup : je crois qu'il y a un package qui le fait de manière opti...\n",
+    "# from nltk import word_tokenize\n",
+    "# fdist = nltk.FreqDist(mots_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13342\n",
+      "144778\n"
+     ]
+    }
+   ],
+   "source": [
+    "# On compte :\n",
+    "# - le nombre de mots du voc en commun (compt)\n",
+    "# - le nombre de mots du corpus en commun (compt_mot)\n",
+    "compt = 0\n",
+    "compt_mot = 0\n",
+    "for mot in vocabulaire_test:\n",
+    "    for word in vocabulaire_train:\n",
+    "        # Ce qu'on trouve\n",
+    "        if mot == word:\n",
+    "            compt = compt +1\n",
+    "            compt_mot = compt_mot + app_test[mot]\n",
+    "print(compt)\n",
+    "print(compt_mot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.20582877959927\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Part des mots du voc non en commun\n",
+    "print(100*(len(vocabulaire_test) - compt)/len(vocabulaire_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4317712978533643\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Part des mots du corpus non en commun\n",
+    "print(100*(len(mots_test) - compt_mot)/len(mots_test))"
    ]
   }
  ],
